chore: 完成物品、配方、注册、流体、结构和 Mixin 等模块的 NeoForge 1.21 迁移并补充 Javadoc 文档
Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>